--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
 
 .App-header {
   background-color: #282c34;
@@ -35,4 +30,10 @@
 .dark-mode {
   background-color: black;
   color: white;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
